# wiki_recommender

./: .gitattributes  LICENSE  Pipfile  README.md  create_assets.py  setup.cfg  setup.py
assets/: saved_recommender.pickle
scripts/: app.py  create_assets.py
src/: app.py  recommender.py  text_prep.py
src/wiki/: recommender.py  text_prep.py
