[metadata]
name = wiki
description = Wikipedia Recommender
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    wiki
install_requires =
    numpy>=1.24.2
    pandas>=1.5.3
    scikit-learn>=1.2.2
    requests >= 2.28.2
    bs4 >= 0.0.1
    nltk >=3.8.1
    matplotlib >=3.7.1
    scipy >= 1.10.1

python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.package_data]
wiki = py.typed

[flake8]
max-line-length = 150